--- a/style.css
+++ b/style.css
@@ -6,13 +6,8 @@ h1{
     color: yellow;
     text-align: center;
 }
-img{
-    width: 300px;
-height: 300px;
-margin-left: 800px;
-}
 .cabecalho{
-    background-color: bisque;
+    background-color: gray;
     display: flex;
 }
 .logoimg{
