--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     width: 150px;
     height: 150px;
 }
-.listacabecalho
+.listacabecalho{
     display: flex;
     margin-left: 400px;
     margin-top: 100px;
