--- a/letras.css
+++ b/letras.css
@@ -1,8 +1,8 @@
 body{
-    background-color: purple;
+    background-color: rgb(0, 34, 128);
 }
 .cabecalho{
-    background-color: bisque;
+    background-color: rgb(196, 231, 255);
     display: flex;
 }
 .logoimg{
@@ -18,7 +18,7 @@ body{
     list-style: none;
     text-transform: uppercase;
     font-size: 30px;
-    color: black;
+    color: rgb(0, 0, 0);
     padding-left: 30px;
     
 }
@@ -26,7 +26,7 @@ body{
     list-style: none;
     text-transform: uppercase;
     font-size: 30px;
-    color: green;
+    color: rgb(0, 98, 128);
     padding-left: 30px;
     
 }
